tests/ui/smoke/dynamic_dispatch_static_definition.lm
trait Foo {
    fn foo();
}

use Foo: Int32 {
    fn foo() { }
}

fn foo<T: Foo>(val: T) {
    Foo::foo()
}
